--- a/tests/meson.build
+++ b/tests/meson.build
@@ -7,8 +7,9 @@ gtest_dep = gtest_proj.get_variable('gtest_dep')
 
 dirs = include_directories('../src', '../include','../tests')
 
-ctest = executable('MCP_test', ['test_main.cpp'] + src_code, dependencies: gtest_dep , include_directories: dirs)
+ctest = executable('MCP_test', ['test_main.cpp', 'datahandler_tests.cpp'] + src_code, dependencies: gtest_dep , include_directories: dirs)
 
 test('MCP_test', ctest)
+test('DataHandler', ctest, args: ['--gtest_filter=DataHandler.*'])
 
 
